--- a/assets/datapack_origins/lang/en_us.json
+++ b/assets/datapack_origins/lang/en_us.json
@@ -9,6 +9,10 @@
 
 	"enchantment.datapack_origins.water_protection": "Water Protection",
 
+	"item.datapack_origins.elytrian_wings": "Wings",
+	"item.datapack_origins.elytrian_wings.lore_1": "Placeholder",
+	"item.datapack_origins.elytrian_wings.lore_2": "-2 Armor",
+	"item.datapack_origins.enderling_pearl": "Enderling Pearl",
 	"item.datapack_origins.origin_orb": "Orb of Origins",
 	
 	"originSelect.title":	"Select your Origin!",
@@ -17,29 +21,18 @@
 	"originSelect.next":	">",
 	
 	"origin.datapack_origins.human":		"Human",
-	"origin.datapack_origins.arachnid":		"Arachnid",
-	"origin.datapack_origins.avian":		"Avian",
 	"origin.datapack_origins.blazeborn":	"Blazeborn",
 	"origin.datapack_origins.elytrian":		"Elytrian",
-	"origin.datapack_origins.enderian":		"Enderian",
-	"origin.datapack_origins.feline":		"Feline",
-	"origin.datapack_origins.merling":		"Merling",
-	"origin.datapack_origins.phantom":		"Phantom",
-	"origin.datapack_origins.shulk":		"Shulk",
+	"origin.datapack_origins.enderling":		"Enderling",
 
 	"origin.datapack_origins.human.description":		"Human ...",
-	"origin.datapack_origins.arachnid.description":		"Arachnid ...",
-	"origin.datapack_origins.avian.description":		"Avian ...",
 	"origin.datapack_origins.blazeborn.description":	"Blazeborn ...",
 	"origin.datapack_origins.elytrian.description":		"Elytrian ...",
-	"origin.datapack_origins.enderian.description":		"Enderian ...",
-	"origin.datapack_origins.feline.description":		"Feline ...",
-	"origin.datapack_origins.merling.description":		"Merling ...",
-	"origin.datapack_origins.phantom.description":		"Phantom ...",
-	"origin.datapack_origins.shulk.description":		"Shulk ...",
+	"origin.datapack_origins.enderling.description":		"Enderling ...",
 
 	"subtitles.entity.generic.hurt_extinguish": "Something is extinguished",
 	"subtitles.entity.generic.hurt_melt": "Something melts",
 	
+	"subtitles.item.enderling_pearl.throw": "Enderling Pearl flies",
 	"subtitles.item.origin_orb.use": "Orb of Origins used"
 }
