theres a lot of things idk what specifically though

--- a/assets/datapack_origins/lang/en_us.json
+++ b/assets/datapack_origins/lang/en_us.json
@@ -1,14 +1,15 @@
 {
-	"death.attack.meltWater": "%1$s melted away",
-	"death.attack.meltWater.item": "%1$s melted away while fighting %2$s wielding %3$s",
-	"death.attack.meltWater.player": "%1$s melted away while fighting %2$s",
+	"death.attack.waterBlaze": "%1$s's flame was extinguished",
+	"death.attack.waterBlaze.item": "%1$s's flame was extinguished while fighting %2$s wielding %3$s",
+	"death.attack.waterBlaze.player": "%1$s's flame was extinguished while fighting %2$s",
 
-	"death.attack.extinguishWater": "%1$s's flame was extinguished",
-	"death.attack.extinguishWater.item": "%1$s's flame was extinguished while fighting %2$s wielding %3$s",
-	"death.attack.extinguishWater.player": "%1$s's flame was extinguished while fighting %2$s",
+	"death.attack.waterEnder": "%1$s melted away",
+	"death.attack.waterEnder.item": "%1$s melted away while fighting %2$s wielding %3$s",
+	"death.attack.waterEnder.player": "%1$s melted away while fighting %2$s",
 
 	"enchantment.datapack_origins.water_protection": "Water Protection",
 
+	"item.datapack_origins.blaze_ball": "Blaze Ball",
 	"item.datapack_origins.elytrian_wings": "Wings",
 	"item.datapack_origins.elytrian_wings.lore_1": "Placeholder",
 	"item.datapack_origins.elytrian_wings.lore_2": "-2 Armor",
@@ -30,9 +31,11 @@
 	"origin.datapack_origins.elytrian.description":		"Elytrian ...",
 	"origin.datapack_origins.enderling.description":		"Enderling ...",
 
-	"subtitles.entity.generic.hurt_extinguish": "Something is extinguished",
-	"subtitles.entity.generic.hurt_melt": "Something melts",
-	
-	"subtitles.item.enderling_pearl.throw": "Enderling Pearl flies",
+	"subtitles.entity.enderling_pearl.throw": "Enderling Pearl flies",
+	"subtitles.entity.player.hurt_water_blaze": "Player is extinguished",
+	"subtitles.entity.player.hurt_water_ender": "Player melts",
+	"subtitles.entity.generic.hurt_water_blaze": "Something is extinguished",
+	"subtitles.entity.generic.hurt_water_ender": "Something melts",
+	"subtitles.item.blaze_ball.shoot": "BLAZE BALL",
 	"subtitles.item.origin_orb.use": "Orb of Origins used"
 }
